<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Bluetooth Lock</string>
	
    <string name="setPassword_name">修改密码</string>
    
    <!--  BluetoothLock -->
    <string name="openLock">开锁</string>
    <string name="password">密码：</string>
    <string name="forgetPassword">修改密码？</string>
    <string name="not_connected">你还没有连接到一个蓝牙设备</string>
    <string name="bt_not_enabled_leaving">蓝牙设备不可用</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已经连接: </string>
    <string name="title_not_connected">尚未连接：</string>

    <!--  DeviceListActivity -->
    <string name="scanning">正在扫描设备...</string>
    <string name="select_device">选择一个设备进行连接</string>
    <string name="none_paired">没有设备可以配对</string>
    <string name="none_found">未发现设备</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">扫描设备</string>
	
    <!-- SetPasswordActivity -->
    <string name="set_password">重置密码</string>
    <string name="currentPassword">原密码：</string>
    <string name="newPassword"> 新密码：</string>
    <string name="btnOK">确定</string>
    <string name="btnCancel">取消</string>
    
    <!-- Options Menu -->
    <string name="connect">连接一个设备</string>
    <string name="discoverable">搜索设备</string>
</resources>
