<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.BluetoothLock.SetPasswordActivity"
    tools:ignore="MergeRootFrame" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="66dp"
        android:text="@string/currentPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
		
     <Button
         android:id="@+id/btnOK"
         android:layout_width="89dp"
         android:layout_height="wrap_content"
         android:layout_x="40dp"
         android:layout_y="233dp"
         android:text="@string/btnOK" />

     <Button
         android:id="@+id/btnCancel"
         android:layout_width="89dp"
         android:layout_height="wrap_content"
         android:layout_x="186dp"
         android:layout_y="233dp"
         android:text="@string/btnCancel" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="10dp"
         android:layout_y="139dp"
         android:text="@string/newPassword"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
         android:id="@+id/newPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="97dp"
         android:layout_y="128dp"
         android:ems="10"
         android:inputType="textPassword" >

         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/setCurrentPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="97dp"
         android:layout_y="54dp"
         android:ems="10"
         android:inputType="textPassword" />

</AbsoluteLayout>
