<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <AbsoluteLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </AbsoluteLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="66dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/setCurrentPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_x="69dp"
        android:layout_y="61dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="212dp"
        android:text="@string/openLock" />

    <TextView
        android:id="@+id/text_setPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="195dp"
        android:layout_y="138dp"
        android:text="@string/forgetPassword"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="20sp" />

</AbsoluteLayout>